# mosaic

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
Ultralytics/: settings.json
docs/: lada-integration.md  roadmap.md  technical-selection.md
scripts/: build-iexpress-installer.ps1  build-portable.ps1  build-windows.ps1  download-lada.ps1  install-from-portable.ps1  mosaic-install.ps1  mosaic-uninstall.ps1  setup-bootstrap.ps1
src/mosaic/: __init__.py  app.py  beauty_filter.py  cli.py  lada_engine.py  processor.py  text_encoding.py  video_analyzer.py
tests/: test_batch_queue.py
